@@ -16,7 +16,7 @@
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-require_once('simpletest/autorun.php');
+#require_once('simpletest/autorun.php');
 require_once('../flaxclient.php');
 require_once('../flaxerrors.php');
 require_once('_testrestclient.php');
@@ -75,13 +75,6 @@ class DatabaseTestCase extends UnitTestCase {
 
         $this->testcount++;
     }
-   
-
 }
-
-$test = &new DatabaseTestCase('http://localhost:8080/');
-$ret = $test->run(new TextReporter()) ? 0 : 1;
-print "passed {$test->testcount} tests\n";
-exit($ret);
 
 ?>
